Update article to latest information